src/lang/simplePascal/SimplePascalParser.java
// $ANTLR 3.5.1 D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g 2013-11-10 15:07:56

  package lang.simplePascal;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class SimplePascalParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGN", "BLOCK", "DIGIT", "DIV", 
		"IDENT", "IF", "INTEGER", "LETTER", "MINUS", "MOD", "MULT", "NEGATION", 
		"PLUS", "POW", "PRINT", "WHILE", "WHITESPACE", "'('", "')'", "';'", "'begin'", 
		"'do'", "'else'", "'end'", "'end.'", "'program'", "'return'", "'then'", 
		"'var'"
	};
	public static final int EOF=-1;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int ASSIGN=4;
	public static final int BLOCK=5;
	public static final int DIGIT=6;
	public static final int DIV=7;
	public static final int IDENT=8;
	public static final int IF=9;
	public static final int INTEGER=10;
	public static final int LETTER=11;
	public static final int MINUS=12;
	public static final int MOD=13;
	public static final int MULT=14;
	public static final int NEGATION=15;
	public static final int PLUS=16;
	public static final int POW=17;
	public static final int PRINT=18;
	public static final int WHILE=19;
	public static final int WHITESPACE=20;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public SimplePascalParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public SimplePascalParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return SimplePascalParser.tokenNames; }
	@Override public String getGrammarFileName() { return "D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g"; }


	public static class program_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "program"
	// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:24:1: program : 'program' ! IDENT ( variableDeclaration )* 'begin' ! ( statement )* returnStatement 'end.' !;
	public final SimplePascalParser.program_return program() throws RecognitionException {
		SimplePascalParser.program_return retval = new SimplePascalParser.program_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal1=null;
		Token IDENT2=null;
		Token string_literal4=null;
		Token string_literal7=null;
		ParserRuleReturnScope variableDeclaration3 =null;
		ParserRuleReturnScope statement5 =null;
		ParserRuleReturnScope returnStatement6 =null;

		CommonTree string_literal1_tree=null;
		CommonTree IDENT2_tree=null;
		CommonTree string_literal4_tree=null;
		CommonTree string_literal7_tree=null;

		try {
			// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:25:3: ( 'program' ! IDENT ( variableDeclaration )* 'begin' ! ( statement )* returnStatement 'end.' !)
			// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:25:5: 'program' ! IDENT ( variableDeclaration )* 'begin' ! ( statement )* returnStatement 'end.' !
			{
			root_0 = (CommonTree)adaptor.nil();


			string_literal1=(Token)match(input,29,FOLLOW_29_in_program84); if (state.failed) return retval;
			IDENT2=(Token)match(input,IDENT,FOLLOW_IDENT_in_program87); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			IDENT2_tree = (CommonTree)adaptor.create(IDENT2);
			adaptor.addChild(root_0, IDENT2_tree);
			}

			// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:26:7: ( variableDeclaration )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==32) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:26:7: variableDeclaration
					{
					pushFollow(FOLLOW_variableDeclaration_in_program95);
					variableDeclaration3=variableDeclaration();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, variableDeclaration3.getTree());

					}
					break;

				default :
					break loop1;
				}
			}

			string_literal4=(Token)match(input,24,FOLLOW_24_in_program102); if (state.failed) return retval;
			// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:28:7: ( statement )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( ((LA2_0 >= IDENT && LA2_0 <= IF)||(LA2_0 >= PRINT && LA2_0 <= WHILE)) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:28:7: statement
					{
					pushFollow(FOLLOW_statement_in_program111);
					statement5=statement();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, statement5.getTree());

					}
					break;

				default :
					break loop2;
				}
			}

			pushFollow(FOLLOW_returnStatement_in_program120);
			returnStatement6=returnStatement();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, returnStatement6.getTree());

			string_literal7=(Token)match(input,28,FOLLOW_28_in_program126); if (state.failed) return retval;
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class returnStatement_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "returnStatement"
	// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:33:1: returnStatement : 'return' ^ expression ';' !;
	public final SimplePascalParser.returnStatement_return returnStatement() throws RecognitionException {
		SimplePascalParser.returnStatement_return retval = new SimplePascalParser.returnStatement_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal8=null;
		Token char_literal10=null;
		ParserRuleReturnScope expression9 =null;

		CommonTree string_literal8_tree=null;
		CommonTree char_literal10_tree=null;

		try {
			// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:34:3: ( 'return' ^ expression ';' !)
			// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:34:5: 'return' ^ expression ';' !
			{
			root_0 = (CommonTree)adaptor.nil();


			string_literal8=(Token)match(input,30,FOLLOW_30_in_returnStatement142); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			string_literal8_tree = (CommonTree)adaptor.create(string_literal8);
			root_0 = (CommonTree)adaptor.becomeRoot(string_literal8_tree, root_0);
			}

			pushFollow(FOLLOW_expression_in_returnStatement145);
			expression9=expression();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, expression9.getTree());

			char_literal10=(Token)match(input,23,FOLLOW_23_in_returnStatement147); if (state.failed) return retval;
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "returnStatement"


	public static class variableDeclaration_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "variableDeclaration"
	// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:37:1: variableDeclaration : 'var' ^ IDENT ';' !;
	public final SimplePascalParser.variableDeclaration_return variableDeclaration() throws RecognitionException {
		SimplePascalParser.variableDeclaration_return retval = new SimplePascalParser.variableDeclaration_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal11=null;
		Token IDENT12=null;
		Token char_literal13=null;

		CommonTree string_literal11_tree=null;
		CommonTree IDENT12_tree=null;
		CommonTree char_literal13_tree=null;

		try {
			// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:38:3: ( 'var' ^ IDENT ';' !)
			// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:38:5: 'var' ^ IDENT ';' !
			{
			root_0 = (CommonTree)adaptor.nil();


			string_literal11=(Token)match(input,32,FOLLOW_32_in_variableDeclaration161); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			string_literal11_tree = (CommonTree)adaptor.create(string_literal11);
			root_0 = (CommonTree)adaptor.becomeRoot(string_literal11_tree, root_0);
			}

			IDENT12=(Token)match(input,IDENT,FOLLOW_IDENT_in_variableDeclaration164); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			IDENT12_tree = (CommonTree)adaptor.create(IDENT12);
			adaptor.addChild(root_0, IDENT12_tree);
			}

			char_literal13=(Token)match(input,23,FOLLOW_23_in_variableDeclaration166); if (state.failed) return retval;
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "variableDeclaration"


	public static class statement_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "statement"
	// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:42:1: statement : ( assignStatement | ifStatement | printStatement | whileStatement );
	public final SimplePascalParser.statement_return statement() throws RecognitionException {
		SimplePascalParser.statement_return retval = new SimplePascalParser.statement_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope assignStatement14 =null;
		ParserRuleReturnScope ifStatement15 =null;
		ParserRuleReturnScope printStatement16 =null;
		ParserRuleReturnScope whileStatement17 =null;


		try {
			// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:43:3: ( assignStatement | ifStatement | printStatement | whileStatement )
			int alt3=4;
			switch ( input.LA(1) ) {
			case IDENT:
				{
				alt3=1;
				}
				break;
			case IF:
				{
				alt3=2;
				}
				break;
			case PRINT:
				{
				alt3=3;
				}
				break;
			case WHILE:
				{
				alt3=4;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}
			switch (alt3) {
				case 1 :
					// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:43:5: assignStatement
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_assignStatement_in_statement185);
					assignStatement14=assignStatement();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, assignStatement14.getTree());

					}
					break;
				case 2 :
					// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:44:5: ifStatement
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_ifStatement_in_statement191);
					ifStatement15=ifStatement();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, ifStatement15.getTree());

					}
					break;
				case 3 :
					// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:45:5: printStatement
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_printStatement_in_statement197);
					printStatement16=printStatement();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, printStatement16.getTree());

					}
					break;
				case 4 :
					// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:46:5: whileStatement
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_whileStatement_in_statement203);
					whileStatement17=whileStatement();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, whileStatement17.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "statement"


	public static class assignStatement_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "assignStatement"
	// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:49:1: assignStatement : IDENT ASSIGN ^ expression ';' !;
	public final SimplePascalParser.assignStatement_return assignStatement() throws RecognitionException {
		SimplePascalParser.assignStatement_return retval = new SimplePascalParser.assignStatement_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token IDENT18=null;
		Token ASSIGN19=null;
		Token char_literal21=null;
		ParserRuleReturnScope expression20 =null;

		CommonTree IDENT18_tree=null;
		CommonTree ASSIGN19_tree=null;
		CommonTree char_literal21_tree=null;

		try {
			// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:50:3: ( IDENT ASSIGN ^ expression ';' !)
			// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:50:5: IDENT ASSIGN ^ expression ';' !
			{
			root_0 = (CommonTree)adaptor.nil();


			IDENT18=(Token)match(input,IDENT,FOLLOW_IDENT_in_assignStatement218); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			IDENT18_tree = (CommonTree)adaptor.create(IDENT18);
			adaptor.addChild(root_0, IDENT18_tree);
			}

			ASSIGN19=(Token)match(input,ASSIGN,FOLLOW_ASSIGN_in_assignStatement220); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			ASSIGN19_tree = (CommonTree)adaptor.create(ASSIGN19);
			root_0 = (CommonTree)adaptor.becomeRoot(ASSIGN19_tree, root_0);
			}

			pushFollow(FOLLOW_expression_in_assignStatement223);
			expression20=expression();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, expression20.getTree());

			char_literal21=(Token)match(input,23,FOLLOW_23_in_assignStatement225); if (state.failed) return retval;
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "assignStatement"


	public static class printStatement_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "printStatement"
	// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:53:1: printStatement : PRINT ^ expression ';' !;
	public final SimplePascalParser.printStatement_return printStatement() throws RecognitionException {
		SimplePascalParser.printStatement_return retval = new SimplePascalParser.printStatement_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token PRINT22=null;
		Token char_literal24=null;
		ParserRuleReturnScope expression23 =null;

		CommonTree PRINT22_tree=null;
		CommonTree char_literal24_tree=null;

		try {
			// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:54:3: ( PRINT ^ expression ';' !)
			// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:54:5: PRINT ^ expression ';' !
			{
			root_0 = (CommonTree)adaptor.nil();


			PRINT22=(Token)match(input,PRINT,FOLLOW_PRINT_in_printStatement241); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			PRINT22_tree = (CommonTree)adaptor.create(PRINT22);
			root_0 = (CommonTree)adaptor.becomeRoot(PRINT22_tree, root_0);
			}

			pushFollow(FOLLOW_expression_in_printStatement244);
			expression23=expression();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, expression23.getTree());

			char_literal24=(Token)match(input,23,FOLLOW_23_in_printStatement246); if (state.failed) return retval;
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "printStatement"


	public static class ifStatement_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "ifStatement"
	// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:57:1: ifStatement : IF ^ expression 'then' ! block ( 'else' ! block )? 'end' ! 'if' ! ';' !;
	public final SimplePascalParser.ifStatement_return ifStatement() throws RecognitionException {
		SimplePascalParser.ifStatement_return retval = new SimplePascalParser.ifStatement_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token IF25=null;
		Token string_literal27=null;
		Token string_literal29=null;
		Token string_literal31=null;
		Token string_literal32=null;
		Token char_literal33=null;
		ParserRuleReturnScope expression26 =null;
		ParserRuleReturnScope block28 =null;
		ParserRuleReturnScope block30 =null;

		CommonTree IF25_tree=null;
		CommonTree string_literal27_tree=null;
		CommonTree string_literal29_tree=null;
		CommonTree string_literal31_tree=null;
		CommonTree string_literal32_tree=null;
		CommonTree char_literal33_tree=null;

		try {
			// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:58:3: ( IF ^ expression 'then' ! block ( 'else' ! block )? 'end' ! 'if' ! ';' !)
			// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:58:5: IF ^ expression 'then' ! block ( 'else' ! block )? 'end' ! 'if' ! ';' !
			{
			root_0 = (CommonTree)adaptor.nil();


			IF25=(Token)match(input,IF,FOLLOW_IF_in_ifStatement264); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			IF25_tree = (CommonTree)adaptor.create(IF25);
			root_0 = (CommonTree)adaptor.becomeRoot(IF25_tree, root_0);
			}

			pushFollow(FOLLOW_expression_in_ifStatement267);
			expression26=expression();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, expression26.getTree());

			string_literal27=(Token)match(input,31,FOLLOW_31_in_ifStatement269); if (state.failed) return retval;
			pushFollow(FOLLOW_block_in_ifStatement278);
			block28=block();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, block28.getTree());

			// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:60:5: ( 'else' ! block )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==26) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:60:6: 'else' ! block
					{
					string_literal29=(Token)match(input,26,FOLLOW_26_in_ifStatement285); if (state.failed) return retval;
					pushFollow(FOLLOW_block_in_ifStatement294);
					block30=block();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, block30.getTree());

					}
					break;

			}

			string_literal31=(Token)match(input,27,FOLLOW_27_in_ifStatement302); if (state.failed) return retval;
			string_literal32=(Token)match(input,IF,FOLLOW_IF_in_ifStatement305); if (state.failed) return retval;
			char_literal33=(Token)match(input,23,FOLLOW_23_in_ifStatement308); if (state.failed) return retval;
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "ifStatement"


	public static class whileStatement_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "whileStatement"
	// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:65:1: whileStatement : WHILE ^ expression 'do' ! block 'end' ! 'while' ! ';' !;
	public final SimplePascalParser.whileStatement_return whileStatement() throws RecognitionException {
		SimplePascalParser.whileStatement_return retval = new SimplePascalParser.whileStatement_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token WHILE34=null;
		Token string_literal36=null;
		Token string_literal38=null;
		Token string_literal39=null;
		Token char_literal40=null;
		ParserRuleReturnScope expression35 =null;
		ParserRuleReturnScope block37 =null;

		CommonTree WHILE34_tree=null;
		CommonTree string_literal36_tree=null;
		CommonTree string_literal38_tree=null;
		CommonTree string_literal39_tree=null;
		CommonTree char_literal40_tree=null;

		try {
			// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:66:3: ( WHILE ^ expression 'do' ! block 'end' ! 'while' ! ';' !)
			// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:66:5: WHILE ^ expression 'do' ! block 'end' ! 'while' ! ';' !
			{
			root_0 = (CommonTree)adaptor.nil();


			WHILE34=(Token)match(input,WHILE,FOLLOW_WHILE_in_whileStatement324); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			WHILE34_tree = (CommonTree)adaptor.create(WHILE34);
			root_0 = (CommonTree)adaptor.becomeRoot(WHILE34_tree, root_0);
			}

			pushFollow(FOLLOW_expression_in_whileStatement327);
			expression35=expression();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, expression35.getTree());

			string_literal36=(Token)match(input,25,FOLLOW_25_in_whileStatement329); if (state.failed) return retval;
			pushFollow(FOLLOW_block_in_whileStatement338);
			block37=block();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, block37.getTree());

			string_literal38=(Token)match(input,27,FOLLOW_27_in_whileStatement344); if (state.failed) return retval;
			string_literal39=(Token)match(input,WHILE,FOLLOW_WHILE_in_whileStatement347); if (state.failed) return retval;
			char_literal40=(Token)match(input,23,FOLLOW_23_in_whileStatement350); if (state.failed) return retval;
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "whileStatement"


	public static class block_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "block"
	// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:71:1: block : ( statement )* -> ^( BLOCK ( statement )* ) ;
	public final SimplePascalParser.block_return block() throws RecognitionException {
		SimplePascalParser.block_return retval = new SimplePascalParser.block_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope statement41 =null;

		RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");

		try {
			// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:72:3: ( ( statement )* -> ^( BLOCK ( statement )* ) )
			// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:72:5: ( statement )*
			{
			// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:72:5: ( statement )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( ((LA5_0 >= IDENT && LA5_0 <= IF)||(LA5_0 >= PRINT && LA5_0 <= WHILE)) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:72:5: statement
					{
					pushFollow(FOLLOW_statement_in_block366);
					statement41=statement();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_statement.add(statement41.getTree());
					}
					break;

				default :
					break loop5;
				}
			}

			// AST REWRITE
			// elements: statement
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 72:16: -> ^( BLOCK ( statement )* )
			{
				// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:72:19: ^( BLOCK ( statement )* )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(BLOCK, "BLOCK"), root_1);
				// D:\\univer\\simplePascal\\src\\lang\\simplePascal\\SimplePascal.g:72:27: ( statement )*
				while ( stream_statement.hasNext() ) {
					adaptor.addChild(root_1, stream_statement.nextTree());
				}
				stream_statement.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "block"


	public static class term_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};

